fix (uniquery): use new design and add editor for :externalid
because the view did not look good with new components from design, and because it is useful to supply a specified value for :externalid - not use 1 as default as now

closes #1997

--- a/src/styles/specifics/reports/_dynamicreport.sass
+++ b/src/styles/specifics/reports/_dynamicreport.sass
@@ -21,12 +21,18 @@ uni-query-details
         clear: both
         height: pxToRem(10)
 
+    .uniquery-externalid-specification
+        position: absolute
+        margin-left: 18rem
+        margin-top: pxToRem(7)
+        z-index: 101
+
+        input
+            width: 6rem
+
 .startinfo-container
     float: left
     width: calc(100% - 360px)
-
-    h1
-        margin-top: 0px
 
     ul
         list-style-type: none
